RESOLVED FIXED75584
Invalid ASSERT() in DFGRepatch.cpp near line 385
https://bugs.webkit.org/show_bug.cgi?id=75584
Summary Invalid ASSERT() in DFGRepatch.cpp near line 385
Michael Saboff
Reported 2012-01-04 15:31:18 PST
In DFGRepatch.cpp, tryBuildGetByIDProtoList() near line 385, the ASSERT has one equal '=' and not two '=='. stubInfo.stubRoutine = MacroAssemblerCodeRef(); stubInfo.initGetByIdProtoList(polymorphicStructureList, 1); } else { ASSERT(stubInfo.accessType = access_get_by_id_proto_list); polymorphicStructureList = stubInfo.u.getByIdProtoList.structureList; listIndex = stubInfo.u.getByIdProtoList.listSize; }
Attachments
Michael Saboff
Comment 1 2012-01-04 16:12:03 PST
Note You need to log in before you can comment on or make changes to this bug.