Invalid ASSERT() in DFGRepatch.cpp near line 385 https://bugs.webkit.org/show_bug.cgi?id=75584

Reviewed by Filip Pizlo.

* dfg/DFGRepatch.cpp:
(JSC::DFG::tryBuildGetByIDProtoList): Fixed ASSERT to use ==.


Canonical link: https://commits.webkit.org/92350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104090 268f45cc-cd09-0410-ab3c-d52691b4dbfc